src/objects/Master_Product__c.object
<CustomObject>
    <fields>
        <fullName>B2B_product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2B product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Boiler</fullName>
                </value>
                <value>
                    <fullName>Electricity</fullName>
                </value>
                <value>
                    <fullName>Energy Saving Lightbulb</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Heating / Cooling</fullName>
                </value>
                <value>
                    <fullName>Insulation</fullName>
                </value>
                <value>
                    <fullName>Lightbulb</fullName>
                </value>
                <value>
                    <fullName>Service Contract</fullName>
                </value>
                <value>
                    <fullName>Solar Panels</fullName>
                </value>
                <value>
                    <fullName>Thermostat</fullName>
                </value>
                <value>
                    <fullName>Water Saving Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Icon__c</fullName>
        <formula>IF( ISPICKVAL( Product_Type__c , &apos;Gas&apos;) , IMAGE(&apos;/resource/Products/products/Gas.png&apos;, &quot;Gas&quot; ,30 ,30) ,  IF(ISPICKVAL( Product_Type__c , &apos;Electricity&apos;), IMAGE(&apos;/resource/Products/products/Electricity.png&apos;, &quot;Electricity&quot; , 30, 30),  IF(ISPICKVAL( Product_Type__c , &apos;Boiler&apos;), IMAGE(&apos;/resource/Products/products/Boiler.png&apos;, &quot;boiler&quot; , 30, 30),  IF(ISPICKVAL( Product_Type__c ,&apos;Energy Saving Lightbulb&apos;), IMAGE(&apos;/resource/Products/products/EnergySaving.png&apos;, &quot;energy saving bulb&quot; , 30, 30),  IF(ISPICKVAL( Product_Type__c , &apos;Heating / Cooling&apos;), IMAGE(&apos;/resource/Products/products/Heating.png&apos;, &quot;heating/cooling&quot; , 30, 30),  IF(ISPICKVAL( Product_Type__c , &apos;Insulation&apos;), IMAGE(&apos;/resource/Products/products/Insulation.png&apos;, &quot;Insulation&quot; , 30, 30),  IF(ISPICKVAL( Product_Type__c , &apos;Lightbulb&apos;), IMAGE(&apos;/resource/Products/products/Lightbulbs.png&apos;, &quot;Lightbulb&quot; , 30, 30),  IF(ISPICKVAL( Product_Type__c , &apos;Service Contract&apos;), IMAGE(&apos;/resource/Products/products/Insurance.png&apos;, &quot;Service Contract&quot; , 30, 30),  IF(ISPICKVAL( Product_Type__c , &apos;SolarPanels&apos;), IMAGE(&apos;/resource/Products/products/Solar Panels.png&apos;, &quot;Solar Panels&quot; , 30, 30),  IF(ISPICKVAL( Product_Type__c , &apos;Thermostat&apos;), IMAGE(&apos;/resource/Products/products/Thermostat.png&apos;, &quot;Thermostat&quot; , 30, 30),  IF(ISPICKVAL( Product_Type__c , &apos;Water Saving Equipment&apos;), IMAGE(&apos;/resource/Products/products/Water.png&apos;, &quot;Water Saving Equipment&quot; , 30, 30), IMAGE(&apos;/resource/Products/products/Water.png&apos;, &quot;Water Saving Equipment&quot; , 30, 30)) ) ) ) ) ) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electricity</fullName>
                </value>
                <value>
                    <fullName>Non-commodity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Master Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>Type_Icon__c</columns>
        <columns>B2B_product__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>